--- a/view/FRM_CURSOS.ui
+++ b/view/FRM_CURSOS.ui
@@ -143,7 +143,7 @@ background-color: rgb(0, 0, 0);
       <rect>
        <x>60</x>
        <y>260</y>
-       <width>381</width>
+       <width>171</width>
        <height>61</height>
       </rect>
      </property>
@@ -206,6 +206,27 @@ background-color: rgb(0, 0, 0);
      </property>
      <property name="styleSheet">
       <string notr="true">COLOR: BLACK</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pb_new">
+     <property name="geometry">
+      <rect>
+       <x>260</x>
+       <y>260</y>
+       <width>171</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>11</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">COLOR: BLACK</string>
+     </property>
+     <property name="text">
+      <string>NUEVO</string>
      </property>
     </widget>
    </widget>
